--- a/index.html
+++ b/index.html
@@ -40,38 +40,47 @@
   </head>
   <body class="font-manrope">
     <main class="max-w-screen-xl mx-auto my-24 sm: px-4">
-      <div class="lg:flex justify-between">
+      <!-- banner section start -->
+
+      <section class="lg:flex justify-between">
         <div class="">
+          <!-- banner title -->
           <h1 class="text-7xl font-bold mb-8 sm:text-5xl">
             It's good <br />
             tea time at The <br />
             Tea House
           </h1>
+          <!-- banner subtitle -->
           <p class="text-gray-500 font-medium mb-8">
             Tea and Botanical Solutions Supplier Give Optimum <br />
             Satisfaction To Your Taste Buds.
           </p>
+          <!-- banner button -->
           <button
             class="text-xl font-bold bg-gradient-to-r from-orange-500 to-red-500 px-5 py-4 text-white rounded-lg"
           >
             Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i>
           </button>
         </div>
+        <!-- banner image -->
         <div class="relative">
           <img src="images/banner.png" alt="" />
+          <!-- banner card -->
           <div
             class="flex items-center shadow-md absolute px-7 py-4 bg-[#FFFFFF] rounded-xl bottom-5 left-20"
           >
+            <!-- banner icon -->
             <div class="pr-3">
               <i class="fa-solid fa-star text-3xl text-[#FFC850]"></i>
             </div>
+            <!-- banner text -->
             <div class="">
               <h1 class="font-extrabold text-3xl">5.00</h1>
               <p class="font-semibold text-gray-500">Trust Pilot Ratings</p>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
