added green tea section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,113 @@
           </div>
         </div>
       </section>
+
+      <!-- featured section start -->
+
+      <section class="mt-32">
+        <!-- feature top -->
+        <div class="text-center">
+          <h1 class="font-extrabold text-5xl mb-6">Our Featured Products</h1>
+          <p class="text-gray-500 font-medium mb-12">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some <br />
+            form, by injected humour, or randomised words which don't look even
+            slightly believable.
+          </p>
+        </div>
+        <!-- featured cards -->
+        <div class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-5">
+          <!-- feaature card -->
+          <div
+            class="bg-gradient-to-b from-[#F4F4F4] to-[#ffffff] text-center rounded-xl"
+          >
+            <img class="mx-auto mt-3 mb-8" src="images/tea-1.png" alt="" />
+            <h1 class="text-2xl font-bold mb-3">Milk Tea</h1>
+            <p class="mb-9 font-semibold text-gray-500">
+              Creamer could be <br />
+              replaced by fresh milk
+            </p>
+          </div>
+          <div
+            class="bg-gradient-to-b from-[#F4F4F4] to-[#ffffff] text-center rounded-xl"
+          >
+            <img class="mx-auto mt-3 mb-8" src="images/tea-2.png" alt="" />
+            <h1 class="text-2xl font-bold mb-3">Black Tea</h1>
+            <p class="mb-9 font-semibold text-gray-500">
+              Creamer could be <br />
+              replaced by fresh milk
+            </p>
+          </div>
+          <div
+            class="bg-gradient-to-b from-[#F4F4F4] to-[#ffffff] text-center rounded-xl"
+          >
+            <img class="mx-auto mt-3 mb-8" src="images/tea-3.png" alt="" />
+            <h1 class="text-2xl font-bold mb-3">Lemon Tea</h1>
+            <p class="mb-9 font-semibold text-gray-500">
+              Creamer could be <br />
+              replaced by fresh milk
+            </p>
+          </div>
+          <div
+            class="bg-gradient-to-b from-[#F4F4F4] to-[#ffffff] text-center rounded-xl"
+          >
+            <img class="mx-auto mt-3 mb-8" src="images/tea-4.png" alt="" />
+            <h1 class="text-2xl font-bold mb-3">Green Tea</h1>
+            <p class="mb-9 font-semibold text-gray-500">
+              Creamer could be <br />
+              replaced by fresh milk
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- green tea section start -->
+
+      <section class="grid grid-cols-1 lg:grid-cols-2 mt-32">
+        <!-- green tea image -->
+        <div class="grid grid-cols-2 grid-rows-3 gap-4 w-5/6">
+          <div
+            class="h-38 bg-gradient-to-r from-red-50 to-red-100 rounded-xl"
+          ></div>
+          <div class="bg-orange-50 row-span-2 rounded-xl">
+            <img class="mx-auto pt-14 pb-7" src="images/fresh-1.png" alt="" />
+          </div>
+          <div class="bg-stone-200 row-span-2 rounded-xl">
+            <img class="mx-auto pt-14 pb-7" src="images/fresh-2.png" alt="" />
+          </div>
+          <div
+            class="h-38 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl"
+          ></div>
+        </div>
+        <!-- green tea content -->
+        <div>
+          <h1 class="font-bold text-5xl mb-8">
+            Great Tea, Freshly <br />
+            Presented
+          </h1>
+          <p class="font-medium text-gray-500 mb-7">
+            The meaning of gong cha is chanese is to provide the best tea to
+            emperor <br />
+            from all possessions . It represents the highest quality and self
+            expectation. <br />
+            Establishing in 2006, Gong cha had been deeply appreciated by its
+            custoers <br />
+            because of good words of mouth and unique customized service
+            orginated <br />
+            from Taiwan.
+          </p>
+          <h1 class="text-xl font-bold mb-3">Unique Taste</h1>
+          <p class="font-medium text-gray-500 mb-5">
+            A Unique and different style from other teapots gives a <br />
+            luxurious and minimalist impression
+          </p>
+          <h1 class="text-xl font-bold mb-3">Premium Quality</h1>
+          <p class="font-medium text-gray-500">
+            Premium Quality that makes tea more elegant and more <br />
+            durable when you use it.
+          </p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
